<resources>
    <string name="app_name">MyPlacesApp</string>
    <string name="action_calcGreatCircle">Calculate Great Circle Distance Icon</string>
    <string name="action_addPlace">Add Place Icon</string>
    <string name="update">Update Place</string>
    <string name="elevation">Elevation</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="address_title">Address Title</string>
    <string name="street_address">Street Address</string>
    <string name="longitude">Longitude</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="elvation">Elvation</string>
    <string name="latitude">Latitude</string>
    <string name="title_main">Select a Place to View / Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="defaulturl">http://10.0.2.2:8080</string>
    <string name="pref_server">Server Preferences</string>
    <string name="pref_http_or_tcp">Use Http Connections</string>
    <string name="pref_http_or_tcp_summary">if not checked, enter tcp:// url below</string>
    <string name="pref_url">Enter the URL for the JsonRPC host</string>
    <string name="pref_url_summary">http://host:port</string>
    <string name="dialog_text">Enter New Place Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="map">View On Map</string>
    <string name="sync_with_server">Sync with Server</string>
</resources>
